# test-sharepoint-with-user

./: .envrc  .gitignore  Dockerfile  Makefile  NUL  README.md  README_ACI_Development.md  azure-config.sh  build_ubuntu_ssh_image.sh  check_site_permissions.py  container-app.yaml  deploy.sh  env.example  extract_sharepoint_ids_ddasys.py  get_container_ip.sh  pyproject.toml  quick_start.sh  requirements.txt  setup_aci_with_identity.sh  setup_acr_with_permissions.sh  setup_graph_permissions.sh  setup_python_aci.sh  sharepoint_auth.py  start.sh  sync_to_aci.sh  test_config.py  test_from_aci.py  test_graph_api.py  test_local_auth.py  test_sharepoint_aci.py  test_sharepoint_auth.py  test_sharepoint_with_ids.py  write_file_final.py  write_file_graph.py  write_file_personal.py  write_file_sharepoint_rest.py  write_file_simple.py  write_file_working.py  write_simple_direct.py
.devcontainer/: devcontainer-aci.json  devcontainer.json
docker/: Dockerfile  start.sh
